--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,2 +1,9 @@
 $violet: hsl(257, 40%, 49%);
 $softMagenta: hsl(300, 69%, 71%);
+$white: hsl(0, 0%, 100%);
+$black: hsl(0, 0%, 0%);
+
+$heading-font: 'Poppins', sans-serif;
+$text-font: 'Open sans', sans-serif;
+
+$bod-shadow: rgba(0,0,0,0.3);
